green trained model

--- a/research/object_detection/object_detection_test.ipynb
+++ b/research/object_detection/object_detection_test.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -334,98 +334,21 @@
     "id": "jG-zn5ykWKMd",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['images/train/img_train_0.jpg', 'images/train/img_train_1000000.jpg', 'images/train/img_train_2000000.jpg', 'images/train/img_train_3000000.jpg', 'images/train/img_train_4000000.jpg', 'images/train/img_train_5000000.jpg', 'images/train/img_train_6000000.jpg', 'images/train/img_train_7000000.jpg', 'images/train/img_train_8000000.jpg', 'images/train/img_train_9000000.jpg', 'images/train/img_train_10000000.jpg', 'images/train/img_train_11000000.jpg', 'images/train/img_train_12000000.jpg', 'images/train/img_train_13000000.jpg', 'images/train/img_train_14000000.jpg', 'images/train/img_train_15000000.jpg', 'images/train/img_train_16000000.jpg', 'images/train/img_train_17000000.jpg', 'images/train/img_train_18000000.jpg', 'images/train/img_train_19000000.jpg', 'images/train/img_train_20000000.jpg']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# For the sake of simplicity we will use only 2 images:\n",
-    "# image1.jpg\n",
-    "# image2.jpg\n",
-    "# If you want to test the code with your images, just add path to the images to the TEST_IMAGE_PATHS.\n",
-    "test_range = [0, \n",
-    "              10000000,\n",
-    "              11111111, \n",
-    "              1111111,\n",
-    "              12222222,\n",
-    "              13333333,\n",
-    "              14444444,\n",
-    "              15555556,\n",
-    "              16666667,\n",
-    "              17777778,\n",
-    "              18888889,\n",
-    "              20000000,\n",
-    "              21111111,\n",
-    "              22222222,\n",
-    "              2222222,\n",
-    "              23333333,\n",
-    "              24444444,\n",
-    "              25555556,\n",
-    "              26666667,\n",
-    "              27777778,\n",
-    "              28888889,\n",
-    "              30000000,\n",
-    "              31111111,\n",
-    "              32222222,\n",
-    "              33333333,\n",
-    "              3333333,\n",
-    "              34444444,\n",
-    "              35555556,\n",
-    "              36666667,\n",
-    "              37777778,\n",
-    "              38888889,\n",
-    "              4444444,\n",
-    "              5555556,\n",
-    "              6666667,\n",
-    "              7777778,\n",
-    "              8888889]\n",
-    "\n",
-    "train_range = [0, \n",
-    "               1000000,\n",
-    "               2000000,\n",
-    "               3000000,\n",
-    "               4000000,\n",
-    "               5000000,\n",
-    "               6000000,\n",
-    "               7000000,\n",
-    "               8000000,\n",
-    "               9000000,\n",
-    "               10000000,\n",
-    "               11000000,\n",
-    "               12000000,\n",
-    "               13000000,\n",
-    "               14000000,\n",
-    "               15000000,\n",
-    "               16000000,\n",
-    "               17000000,\n",
-    "               18000000,\n",
-    "               19000000,\n",
-    "               20000000\n",
-    "              ]\n",
-    "\n",
-    "# image_range = test_range\n",
-    "# image_prefix = 'test'\n",
-    "\n",
-    "image_range = train_range\n",
-    "image_prefix = 'train'\n",
+    "# image_prefix = 'train'\n",
+    "image_prefix = 'test'\n",
     "\n",
     "PATH_TO_TEST_IMAGES_DIR = os.path.join('images', image_prefix)\n",
     "\n",
-    "TEST_IMAGE_PATHS = [ os.path.join(PATH_TO_TEST_IMAGES_DIR, 'img_'+ image_prefix + '_{}.jpg'.format(i)) for i in image_range ]\n",
+    "image_range = [file for file in os.listdir(PATH_TO_TEST_IMAGES_DIR) if file.endswith(\".jpg\")]\n",
     "\n",
-    "# Size, in inches, of the output images.\n",
-    "IMAGE_SIZE = (12, 8)\n",
-    "print(TEST_IMAGE_PATHS)"
+    "TEST_IMAGE_PATHS = [ os.path.join(PATH_TO_TEST_IMAGES_DIR, i) for i in image_range ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -452,8 +375,7 @@
     "      ]:\n",
     "        tensor_name = key + ':0'\n",
     "        if tensor_name in all_tensor_names:\n",
-    "          tensor_dict[key] = tf.get_default_graph().get_tensor_by_name(\n",
-    "              tensor_name)\n",
+    "          tensor_dict[key] = tf.get_default_graph().get_tensor_by_name(tensor_name)\n",
     "      if 'detection_masks' in tensor_dict:\n",
     "        # The following processing is only for single image\n",
     "        detection_boxes = tf.squeeze(tensor_dict['detection_boxes'], [0])\n",
@@ -465,7 +387,7 @@
     "        detection_masks_reframed = utils_ops.reframe_box_masks_to_image_masks(\n",
     "            detection_masks, detection_boxes, image.shape[1], image.shape[2])\n",
     "        detection_masks_reframed = tf.cast(\n",
-    "            tf.greater(detection_masks_reframed, 0.5), tf.uint8)\n",
+    "            tf.greater(detection_masks_reframed, 0.01), tf.uint8)\n",
     "        # Follow the convention by adding back the batch dimension\n",
     "        tensor_dict['detection_masks'] = tf.expand_dims(\n",
     "            detection_masks_reframed, 0)\n",
@@ -488,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -505,32 +427,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved [images/train/img_train_0.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_1000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_2000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_3000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_4000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_5000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_6000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_7000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_8000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_9000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_10000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_11000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_12000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_13000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_14000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_15000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_16000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_17000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_18000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_19000000.jpg.bla.jpg]\n",
-      "saved [images/train/img_train_20000000.jpg.bla.jpg]\n",
+      "saved [images/detection/img_test_20666667.jpg]\n",
+      "saved [images/detection/img_test_6000000.jpg]\n",
+      "saved [images/detection/img_test_31333333.jpg]\n",
+      "saved [images/detection/img_test_1333333.jpg]\n",
+      "saved [images/detection/img_test_2666667.jpg]\n",
+      "saved [images/detection/img_test_2000000.jpg]\n",
+      "saved [images/detection/img_test_26000000.jpg]\n",
+      "saved [images/detection/img_test_40000000.jpg]\n",
+      "saved [images/detection/img_test_6666667.jpg]\n",
+      "saved [images/detection/img_test_22666667.jpg]\n",
+      "saved [images/detection/img_test_10000000.jpg]\n",
+      "saved [images/detection/img_test_34000000.jpg]\n",
+      "saved [images/detection/img_test_666667.jpg]\n",
+      "saved [images/detection/img_test_34666667.jpg]\n",
+      "saved [images/detection/img_test_18666667.jpg]\n",
+      "saved [images/detection/img_test_0.jpg]\n",
+      "saved [images/detection/img_test_8000000.jpg]\n",
+      "saved [images/detection/img_test_5333333.jpg]\n",
+      "saved [images/detection/img_test_26666667.jpg]\n",
+      "saved [images/detection/img_test_36000000.jpg]\n",
+      "saved [images/detection/img_test_36666667.jpg]\n",
+      "saved [images/detection/img_test_25333333.jpg]\n",
+      "saved [images/detection/img_test_12666667.jpg]\n",
+      "saved [images/detection/img_test_8666667.jpg]\n",
+      "saved [images/detection/img_test_9333333.jpg]\n",
+      "saved [images/detection/img_test_17333333.jpg]\n",
+      "saved [images/detection/img_test_27333333.jpg]\n",
+      "saved [images/detection/img_test_16000000.jpg]\n",
+      "saved [images/detection/img_test_18000000.jpg]\n",
+      "saved [images/detection/img_test_24666667.jpg]\n",
+      "saved [images/detection/img_test_38666667.jpg]\n",
+      "saved [images/detection/img_test_16666667.jpg]\n",
+      "saved [images/detection/img_test_21333333.jpg]\n",
+      "saved [images/detection/img_test_3333333.jpg]\n",
+      "saved [images/detection/img_test_10666667.jpg]\n",
+      "saved [images/detection/img_test_30000000.jpg]\n",
+      "saved [images/detection/img_test_29333333.jpg]\n",
+      "saved [images/detection/img_test_24000000.jpg]\n",
+      "saved [images/detection/img_test_32666667.jpg]\n",
+      "saved [images/detection/img_test_20000000.jpg]\n",
+      "saved [images/detection/img_test_28666667.jpg]\n",
+      "saved [images/detection/img_test_32000000.jpg]\n",
+      "saved [images/detection/img_test_37333333.jpg]\n",
+      "saved [images/detection/img_test_33333333.jpg]\n",
+      "saved [images/detection/img_test_15333333.jpg]\n",
+      "saved [images/detection/img_test_28000000.jpg]\n",
+      "saved [images/detection/img_test_13333333.jpg]\n",
+      "saved [images/detection/img_test_4000000.jpg]\n",
+      "saved [images/detection/img_test_11333333.jpg]\n",
+      "saved [images/detection/img_test_39333333.jpg]\n",
+      "saved [images/detection/img_test_35333333.jpg]\n",
+      "saved [images/detection/img_test_4666667.jpg]\n",
+      "saved [images/detection/img_test_14000000.jpg]\n",
+      "saved [images/detection/img_test_30666667.jpg]\n",
+      "saved [images/detection/img_test_12000000.jpg]\n",
+      "saved [images/detection/img_test_7333333.jpg]\n",
+      "saved [images/detection/img_test_38000000.jpg]\n",
+      "saved [images/detection/img_test_14666667.jpg]\n",
+      "saved [images/detection/img_test_22000000.jpg]\n",
+      "saved [images/detection/img_test_23333333.jpg]\n",
+      "saved [images/detection/img_test_19333333.jpg]\n",
       "done!\n"
      ]
     }
    ],
    "source": [
+    "detection_dir = os.path.join('images', 'detection')\n",
+    "if not os.path.exists(detection_dir):\n",
+    "    os.makedirs(detection_dir)\n",
     "for image_path in TEST_IMAGE_PATHS:\n",
     "  image = Image.open(image_path)\n",
     "  # the array based representation of the image will be used later in order to prepare the\n",
@@ -550,12 +515,10 @@
     "      instance_masks=output_dict.get('detection_masks'),\n",
     "      use_normalized_coordinates=True,\n",
     "      line_thickness=8)\n",
-    "  plt.figure(figsize=IMAGE_SIZE)\n",
-    "  #plt.imshow(image_np)\n",
-    "  bla_image = Image.fromarray(image_np)\n",
-    "  bla_image_path = image_path + '.bla.jpg'\n",
-    "  bla_image.save(bla_image_path)\n",
-    "  print('saved [' + bla_image_path + ']')\n",
+    "  detection_image = Image.fromarray(image_np)\n",
+    "  detection_image_path = os.path.join('images/detection', os.path.basename(image_path))\n",
+    "  detection_image.save(detection_image_path)\n",
+    "  print('saved [' + detection_image_path + ']')\n",
     "print('done!')"
    ]
   },
